# ipray

./: .gitignore  CHANGELOG.md  README.md  delete node_module dan package.lock.json.txt  git_upload.bat  help.txt  main.cpp  main.cpp1  makefile
.github/workflows/: build.yml
backup/: MakeFile.bak
components/: Media.cpp  Media.hpp  Setup.cpp  Setup.hpp  Shape.cpp  Shape.hpp  TarikhHijrah.cpp  TarikhHijrah.hpp  Text.cpp  Text.hpp  TimeSolat.cpp  TimeSolat.hpp  utils.cpp  utils.hpp
fonts/: fontref.txt
images/: waktu.pdn
macos/: build.bat
macos/src/: Lecture.hpp  LoadManager.hpp  Shape.cpp  fix.hpp
macos_raspi/: CMakeLists.txt  build_and_install_to_pi.sh  build_linux.sh  build_macos.sh  deploy_to_pi.sh  install_to_pi.sh  run_windows.bat
macos_raspi/cmake/: CreateLayoutFiles.cmake
macos_raspi/raspberry_pi/: CMakeLists.txt  Info.plist  build_and_install_to_pi.sh  run_macos.sh  setup_vnc_pi.sh
macos_raspi/raspberry_pi/resources/data copy/: KDH01.txt  PHG02.txt  PHG06.txt  PRK01.txt  PRK02.txt  PRK06.txt  SBH03.txt  SBH09.txt  SWK04.txt
macos_raspi/raspberry_pi/src/: AppState.hpp  LayoutManager.cpp  TarikhHijrah.cpp  main.cpp  utils.cpp
macos_raspi/raspberry_pi/src/layouts/: PrayerAlertLayout.cpp  PrayerAlertLayout.hpp  SlideshowLayout.hpp  UpComingLayout.cpp
macos_raspi/src/: BeepUtil.cpp  BeepUtil.h  ClockDateDisplay.cpp  ClockDateDisplay.hpp  Event.hpp  LayoutManager.cpp  LayoutManager.hpp  LoadManager.cpp  TimeSolat.hpp  main.cpp  utils.hpp
node-react-jssor/: 20260529.md  PLAN_MASA_MESIN.md
node-react-jssor capacitor android box/react/: .env.example  .env.production  capacitor.config.json  vite.config.js
node-react-jssor capacitor android box1/cloud/: REDIS_UPGRADE.md  package-lock.json
node-react-jssor capacitor android box1/flutter/: app_brand.yaml
node-react-jssor capacitor android box1/nodejs/: electron-main.js  package-lock.json
node-react-jssor capacitor android box1/react/: capacitor.config.json  index.html  package-lock.json  package.json
node-react-jssor capacitor android box2/nodejs/: main.js  package.json
node-react-jssor capacitor android box2/react/: vite.config.js
node-react-jssor v11-ok/nodejs/: package.json
node-react-jssor v11-ok/react/: package.json
node-react-jssor v14-ok/nodejs/: main.js
node-react-jssor v15- sync cloud/nodejs/: cloudClient.js  electron-builder.yml
node-react-jssor v15- sync cloud/react/: .env.example  index.html
node-react-jssor v16-sync-cloud/cloud/: package.json
node-react-jssor v16-sync-cloud/kiosk-ipray-setup/: config-ipray.txt
node-react-jssor v16-sync-cloud/nodejs/: main.js  package.json
node-react-jssor v17-sync-cloud/md/: SYSTEM_TIME_SETUP.md
node-react-jssor v17-sync-cloud/nodejs/: env.example  package.json
node-react-jssor v18-sync-cloud/cloud/: server.js
node-react-jssor v18-sync-cloud/nodejs/: electron-builder.yml  main.js
node-react-jssor v19-sync-cloud/nodejs/: electron-builder.yml  main.js
node-react-jssor v20-cloud-flutter/nodejs/: main.js
node-react-jssor v5/kiosk-ipray-setup/: APPLY-ON-IPRAY.txt  RASPBERRY-PI-SETUP.md  README.md  copy-slides-to-ipray.sh  kiosk-ipray.sh
node-react-jssor v6/nodejs/: nodemon.json
node-react-jssor v7/md/: PUSH_INSTRUCTIONS.md
node-react-jssor v8/nodejs/: main.js  package-lock.json
node-react-jssor-bak/cloud/: package.json
node-react-jssor-cloud-flutter v1/nodejs/: electron-builder.yml  env.example
node-react-jssor-cloud-flutter v1/react/: package.json  tailwind.config.js  vite.config.js
node-react-jssor-cloud-flutter v2/cloud/: package.json  server.js
node-react-jssor-cloud-flutter v2/ipray_cloud_admin/: pubspec.yaml
node-react-jssor-page-designer/flutter/: pubspec.yaml
node-react-jssor-page-designer/nodejs/: electron-main.js
node-react-jssor/cloud/: server.js
node-react-jssor/flutter/: pubspec.yaml
node-react-jssor/ipray_cloud_admin/: README.md  pubspec.yaml
node-react-jssor/kiosk/: autostart-kiosk.sh  setup-complete-kiosk.sh  setup-kiosk-autostart.sh  setup-sleep-disable.sh  start-kiosk.sh  stop-kiosk.sh
node-react-jssor/kiosk-ipray-setup/: FIX-NGINX-502.md  PM2-SYSTEMD-SETUP.md  README.md  SYSTEMD-NODEJS-SETUP.md  kiosk.sh  setup-pm2-systemd.sh
node-react-jssor/nodejs/: ecosystem.config.js  main.js  package-lock.json
node-react-jssor/react/: package-lock.json  vite.config.js
v1/: README.md
v1/macos/: CMakeLists.txt  README  run_linux.sh
v1/macos/resources/data copy/: SWK05.txt  SWK08.txt  SWK09.txt  WLY01.txt
v1/macos/src/: BeepUtil copy.cpp  LayoutManager.hpp  LoadManager.cpp  Media.hpp  ResourcePath.cpp  ResourcePath.hpp  ResourcePath.mm  Setup.hpp  Shape.hpp  Text.cpp  Text.hpp  TimeSolat.cpp
v1/macos/src/layouts/: DefaultLayout.cpp  DefaultLayout.hpp  IqamahLayout.hpp  LayoutBase.cpp  LectureLayout.cpp  UpcomingLayout.hpp
v1/macos_raspi/: run_on_pi.sh
v2/: .gitignore  README.md
v2/jssor slider/: iim.html  sample.html  vanilla.html
v2/react-jssor_slider/: index.html  package-lock.json  setup-dev-data.sh  vite.config.js
v2/react-migration/: .buildignore  README.md  electron-main.js  index.html  package-lock.json  package.json  preload.js  tailwind.config.js  vite.config.js
web/: config.txt  data copy.txt  data.txt  index.html  private.txt  public.txt  takwim.txt  video.html
web/css/: animate.min.css  app copy.css  app.css  tailwindcss-custom.css
web/data/: JHR01.txt  JHR02.txt  JHR03.txt  JHR04.txt  KDH01.txt  KDH02.txt  KDH03.txt  KDH04.txt  KDH05.txt  KDH06.txt  KDH07.txt  KTN01.txt  KTN03.txt  MLK01.txt  NGS01.txt  NGS02.txt  PHG01.txt  PHG02.txt  PHG03.txt  PHG04.txt  PHG05.txt  PHG06.txt  PLS01.txt  PNG01.txt  PRK01.txt  PRK02.txt  PRK03.txt  PRK04.txt  PRK05.txt  PRK06.txt  PRK07.txt  SBH01.txt  SBH02.txt  SBH03.txt  SBH04.txt  SBH05.txt  SBH06.txt  SBH07.txt  SBH08.txt  SBH09.txt  (+21 more)
web/data-takwim/: JHR04.txt  KDH06.txt  MLK01.txt  PHG01.txt  PHG04.txt  PLS01.txt  PRK07.txt  SGR01.txt  SGR02.txt  TRG02.txt  TRG03.txt
web/js/: app copy 2.js  app copy.js  app-electron.js0  app.js  async.js  dataExtractor.js  setting.js
web/resources/: conf.ini  widgets.pdn
(+996 files in other folders)
